[gd_scene load_steps=2 format=3 uid="uid://debounce_test_scene"]

[ext_resource type="Script" path="res://scripts/tests/input_debounce_test.gd" id="1_debounce_test"]

[node name="InputDebounceTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_debounce_test")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -400.0
offset_right = 500.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="UI"]
layout_mode = 2
text = "Input Buffering & Debouncing Test"
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="HSeparator" type="HSeparator" parent="UI"]
layout_mode = 2

[node name="Statistics" type="VBoxContainer" parent="UI"]
layout_mode = 2

[node name="BufferStats" type="Label" parent="UI/Statistics"]
layout_mode = 2
text = "Buffer Size: 0"
theme_override_font_sizes/font_size = 16

[node name="DebouncedStats" type="Label" parent="UI/Statistics"]
layout_mode = 2
text = "Actions Debounced: 0"
theme_override_font_sizes/font_size = 16

[node name="NoiseDetected" type="Label" parent="UI/Statistics"]
layout_mode = 2
text = "Hardware Noise Detected: 0"
theme_override_font_sizes/font_size = 16

[node name="LastAction" type="Label" parent="UI/Statistics"]
layout_mode = 2
text = "Last Action: None"
theme_override_font_sizes/font_size = 16

[node name="HSeparator2" type="HSeparator" parent="UI"]
layout_mode = 2

[node name="ActionLog" type="RichTextLabel" parent="UI"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[b]Action Log:[/b]
Tap rapidly to test debouncing..."
fit_content = true
scroll_following = true

[node name="HSeparator3" type="HSeparator" parent="UI"]
layout_mode = 2

[node name="TestControls" type="VBoxContainer" parent="UI"]
layout_mode = 2

[node name="TestButtons" type="HBoxContainer" parent="UI/TestControls"]
layout_mode = 2

[node name="StressTest" type="Button" parent="UI/TestControls/TestButtons"]
layout_mode = 2
text = "Stress Test"

[node name="ClearLog" type="Button" parent="UI/TestControls/TestButtons"]
layout_mode = 2
text = "Clear Log"

[node name="ToggleLogging" type="CheckBox" parent="UI/TestControls/TestButtons"]
layout_mode = 2
text = "Enable Logging"

[node name="DebounceSettings" type="HBoxContainer" parent="UI/TestControls"]
layout_mode = 2

[node name="TapThresholdLabel" type="Label" parent="UI/TestControls/DebounceSettings"]
layout_mode = 2
text = "Tap Threshold:"

[node name="TapThresholdSlider" type="HSlider" parent="UI/TestControls/DebounceSettings"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.01
max_value = 0.5
step = 0.01
value = 0.08

[node name="TapThresholdValue" type="Label" parent="UI/TestControls/DebounceSettings"]
layout_mode = 2
text = "80ms"

[node name="TestArea" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -200.0
offset_bottom = 200.0
color = Color(0.2, 0.2, 0.3, 1)

[node name="TestAreaLabel" type="Label" parent="TestArea"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
text = "TAP HERE TO TEST
DEBOUNCING"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 1, 1, 1)
horizontal_alignment = 1
vertical_alignment = 1 